--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#6b6b6b</color>
     <color name="colorAccent">#f9e958</color>
     <color name="black">#8bafbb</color>
+    <color name="white">#fff</color>
 </resources>
